# rtp-types

./: .gitignore  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: rust-coverage.yml  rust-fuzz.yml  rust.yml
benches/: parse.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rtp_from_bytes.rs
src/: builder.rs  edit.rs  lib.rs  packet.rs
